k8s/skywalking/1-ns.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: skywalking
  labels:
    app: skywalking
    app.kubernetes.io/name: skywalking
