k8s/skywalking/4-skywalking-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skywalking-ui
  namespace: skywalking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skywalking-ui
  template:
    metadata:
      labels:
        app: skywalking-ui
    spec:
      containers:
        - name: ui
          image: apache/skywalking-ui:9.5.0
          ports:
            - containerPort: 8080
