k8s/skywalking/6-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skywalking-ingress
  namespace: skywalking
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - skywalking.pttech.cc
    secretName: skywalking-tls-name
  ingressClassName: nginx
  rules:
  - host: skywalking.pttech.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: skywalking-skywalking-helm-ui
            port:
              number: 80
